@@ -1,5 +1,7 @@
 == Changelog
 
+- Ajout d'une commande "entrée de ligne"
+
 - Mise à jour de librairie de communication avec les sonos
 - Optimisation du chargement des playlists
 - Ajout de picotts pour la génération du TTS en locale
